[gd_scene load_steps=3 format=3 uid="uid://dkt03ckqtyvld"]

[ext_resource type="FontFile" uid="uid://djffw4apfdt0k" path="res://fonts/EHU Sans/EHUSans-black.otf" id="1_ahhtf"]
[ext_resource type="Script" uid="uid://bbysgjoryy3ie" path="res://scripts/hud.gd" id="1_oo0fn"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_oo0fn")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -114.0
offset_top = 24.0
offset_right = 115.0
offset_bottom = 89.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 40
text = "Alive: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnergyLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -277.0
offset_top = 24.0
offset_right = -48.0
offset_bottom = 89.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 40
text = "Energy: 0%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelLabel" type="Label" parent="."]
offset_top = 24.0
offset_right = 229.0
offset_bottom = 89.0
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 40
text = "Level: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = -167.0
offset_right = 27.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 64
text = "Dodge the Creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -193.0
offset_right = 125.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 64
text = "Start"
icon_alignment = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
